Bug 57720 - [SNB] FREXT02_JVC_C.264 (High Profile) can't playback correctly with vaapi
Summary: [SNB] FREXT02_JVC_C.264 (High Profile) can't playback correctly with vaapi
Status: VERIFIED FIXED
Alias: None
Product: libva
Classification: Unclassified
Component: intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: haihao
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-30 05:56 UTC by Du Yan
Modified: 2013-01-23 04:46 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Du Yan 2012-11-30 05:56:05 UTC
Environment:
--------------
Platform:SGB
Libva: (staging)
commit 38c94cd922473095814ed9a9f99ad98fcc9c285d
Intel-driver: (staging)
commit c0ef9d99df37ae45589fecb898727be495e50304

Bug Info:
--------------
FREXT02_JVC_C.264   352x288   High 3.1    interlace?(Yes)
Y SSIM extreme 0.531532 
Y SSIM average 0.747388 
U SSIM extreme 0.958374 
U SSIM average 0.978214 
V SSIM extreme 0.964950 
V SSIM average 0.978691 
Frame NO. 16 
Dumped frame NO. 14 
Lost Frames 2
Comment 1 Du Yan 2012-12-03 05:47:37 UTC
test on IVB platform and still 2 frames lost.

Here is the detail result on IVB:

Filename : FREXT02_JVC_C.264 
Y SSIM extreme : 1.000000 
Y SSIM average : 1.000000 
U SSIM extreme : 1.000000 
U SSIM average : 1.000000 
V SSIM extreme : 1.000000 
V SSIM average : 1.000000 
Frame NO. : 16 
Dumped frame NO. : 14 
Lost Frames : 2
Comment 2 Du Yan 2012-12-03 07:31:31 UTC
FREXT02_JVC_C.264 can't playback correctly when using hardware decoding on SGB. and playback normally on IVB.

mplayer -nosound -fps 1 -va vaapi -vo vaapi /home/AVC_conformance/Base_Ext_Main_profile/FREXT02_JVC_C.264
Comment 3 Du Yan 2013-01-07 05:31:32 UTC
libva: (staging) 2e11d2273b2974a7d1959cbcaf8db5b8e9aedd9e
Intel-driver: (staging) e01e94d312a0b23764367e87958c23bf76e6a782

Issue can be reproduced on SNB.
Comment 4 haihao 2013-01-08 02:43:01 UTC
commit 066c9f6532b11e1e3d0457520dea565cd29faea7
Author: Xiang, Haihao <haihao.xiang@intel.com>
Date:   Tue Jan 8 10:31:43 2013 +0800

    Always set Fix_Prev_Mb_skipped in AVC_BSD_OBJECT command
Comment 5 Du Yan 2013-01-22 01:57:02 UTC
Issue still can be reproduced on SNB

libva: staging 21649988d6b532cc96f633db017d1e4369f640e9
inter-driver: staging d206b47a6ac86c089149ecd71b01eea6ebda5796
Comment 6 haihao 2013-01-23 04:44:40 UTC
The issue disappers after after re-building the driver manually on SGB, could you double-check your test script ?
Comment 7 Du Yan 2013-01-23 04:46:29 UTC
Issue has fixed. Close it.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.