Always set Fix_Prev_Mb_skipped in AVC_BSD_OBJECT command

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=57720
Signed-off-by: Xiang, Haihao <haihao.xiang@intel.com>
(cherry picked from commit f750d1b69e1aae65463eab224013b506481d8459)